--- a/_layouts/projet.html
+++ b/_layouts/projet.html
@@ -7,7 +7,7 @@ layout: default
         <div class="card-header text-center">
             <div class="row rowImage">
                 <div class="col-12 d-flex align-items-center">
-                    <img src="./img/{{ page.image }}" class="rounded mx-auto" alt="{{ page.imageAlt }}">
+                    <img src="./img/{{ page.image.name }}" class="rounded mx-auto" alt="{{ page.image.alt }}">
                 </div>
             </div>
         </div>
@@ -15,13 +15,13 @@ layout: default
             <h4 class="card-title text-center fr">{{ page.title.fr }}</h4>
             <h4 class="card-title text-center en">{{ page.title.en }}</h4>
             <hr>
-            <p class="card-text fr">{{ page.content.fr }}</p>
-            <p class="card-text en">{{ page.content.en }}</p>
+            <p class="card-text fr">{{ .content.fr }}</p>
+            <p class="card-text en">{{ content.en }}</p>
         </div>
         <div class="card-footer text-center">
-            {% if(page.repository.lien != "") %}
-              <a target="_blank" href="{{ page.website.lien }}" class="btn btn-primary btn-block fr">{{ page.website.txt }}</a>
-              <a target="_blank" href="{{ page.website.lien }}" class="btn btn-primary btn-block en">{{ page.website.txt }}</a>
+            {% if(page.website.lien != "") %}
+              <a target="_blank" href="{{ page.website.lien }}" class="btn btn-primary btn-block fr">{{ page.website.txt.fr }}</a>
+              <a target="_blank" href="{{ page.website.lien }}" class="btn btn-primary btn-block en">{{ page.website.txt.en }}</a>
             {% endif %}
             {% if(page.repository.lien != "") %}
               <a target="_blank" href="{{ page.repository.lien }}" class="btn btn-secondary btn-block"><i class="fab fa-github"></i> Github repository</a>
