--- a/_layouts/projet.html
+++ b/_layouts/projet.html
@@ -15,8 +15,8 @@ layout: default
             <h4 class="card-title text-center fr">{{ page.title.fr }}</h4>
             <h4 class="card-title text-center en">{{ page.title.en }}</h4>
             <hr>
-            <p class="card-text fr">{{ .content.fr }}</p>
-            <p class="card-text en">{{ content.en }}</p>
+            <p class="card-text fr">{{ page.content.fr }}</p>
+            <p class="card-text en">{{ page.content.en }}</p>
         </div>
         <div class="card-footer text-center">
             {% if(page.website.lien != "") %}
