--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,124 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="description" content="Site vitrine de Antoine TABARAUD">
-    <meta name="author" content="Antoine TABARAUD">
-    <title>Antoine TABARAUD{{ page.title }}</title>
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <!-- Fontawesome icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <!-- Drapeaux -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.1.0/css/flag-icon.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
-    <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">-->
-    <!-- CSS perso -->
-    <link rel="stylesheet" href="./css/style.css">
-    <!-- pour le mode nuit -->
-    <link rel="stylesheet" href="./css/dark-mode.css">
+    {% include head.html.twig %}
 </head>
 <body>
 
-<header class="sticky-top page-header">
-    <!-- NavBar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-        <a class="navbar-brand" href="./">AT</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarToggler">
-            <ul class="navbar-nav ml-auto mr-auto text-center">
-                <li class="nav-item ml-1 mr-1">
-                    <a class="nav-link" href="./index.html">
-                        <span class="fr">Accueil</span>
-                        <span class="en">Home</span>
-                    </a>
-                </li>
-                <li class="nav-item ml-1 mr-1">
-                    <a class="nav-link" href="./Diplomas.html">
-                        <span class="fr">Diplômes</span>
-                        <span class="en">Diplomas</span>
-                    </a>
-                </li>
-                <li class="nav-item ml-1 mr-1">
-                    <a class="nav-link" href="./Work%20Experience.html">
-                        <span class="fr">Expérience Professionnelle</span>
-                        <span class="en">Work Experience</span>
-                    </a>
-                </li>
-                <li class="nav-item ml-1 mr-1">
-                    <a class="nav-link" href="./Projects.html">
-                        <span class="fr">Projets et réalisations</span>
-                        <span class="en">Projects and achievements</span>
-                    </a>
-                </li>
-                <li class="nav-item ml-1 mr-1 active">
-                    <a class="nav-link" href="./Contact.html">
-                        <span class="fr">Me contacter <span class="sr-only">(actuel)</span></span>
-                        <span class="en">Contact me <span class="sr-only">(current)</span></span>
-                    </a>
-                </li>
-                <li class="nav-item dropdown ml-1 mr-1">
-                    <a class="nav-link dropdown-toggle choix-lang" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        <span class="fr"><span class="flag-icon flag-icon-fr"> </span></span>
-                        <span class="en"><span class="flag-icon flag-icon-gb"> </span></span>
-                    </a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item choix-lang fr" href="?lang=EN"><span class="flag-icon flag-icon-gb"> </span>  English</a>
-                        <a class="dropdown-item choix-lang en" href="?lang=FR"><span class="flag-icon flag-icon-fr"> </span>  Français</a>
-                    </div>
-                </li>
-                <li class="nav-item custom-control custom-switch ml-1 mr-1">
-                    <div class="nav-link">
-                        <input type="checkbox" class="custom-control-input darkSwitch" id="darkSwitch"/>
-                        <label class="custom-control-label darkSwitch" for="darkSwitch">Dark Mode</label>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!-- Fin NavBar -->
-</header>
+{% include header.html.twig %}
 
 <main class="page-main" role="main">
         {{ content }}
 </main>
 
-<!-- Footer -->
-<footer class="container-fluid page-footer">
-    <div class="row">
-        <div class="col-12">
-            <hr class="container">
-            <p class="text-center">
-                <span class="fr">Tous droits réservés. &copy; 2020 - Antoine TABARAUD<br/><i>Dernière mise à jour : septembre 2020</i></span>
-                <span class="en">All rights reserved. &copy; 2020 - Antoine TABARAUD<br/><i>Last update : September 2020</i></span>
-            </p>
-        </div>
-    </div>
-</footer>
-<!-- Fin Footer -->
+{% include footer.html.twig %}
+{% include script.html.twig %}
 
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-<!-- MDB core JavaScript -->
-<!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/0.9.0rc1/jspdf.min.js"></script>-->
-
-
-<script src="./js/script.js"></script>
-
-<!-- pour le changement de theme https://raw.githubusercontent.com/coliff/dark-mode-switch/master/dark-mode-switch.min.js -->
-<script src="./js/dark-mode-switch.js"></script>
 </body>
 </html>
