--- a/_includes/list_of_work_experience.html.twig
+++ b/_includes/list_of_work_experience.html.twig
@@ -1,11 +1,11 @@
-{% set previous_year = 0 %}
+{% assign previous_year = 0 %}
 
 
 {% for item in site.data.work_experience %}
 
 
     {% if previous_year != work.year %}
-        {% if previous_year - work.year > 1 and not loop.first %}
+        {% if previous_year - work.year > 1 and not forloop.first %}
             <!-- {{ previous_year - 1 }} -->
             <!-- année -->
             <div class="row">
@@ -23,18 +23,18 @@
         </div>
     {% endif %}
 
-    {% set previous_year = work.year %}
+    {% assign previous_year = work.year %}
 
     <div class="row">
         <!-- {{ work.name }} -->
-        <div class="card col-md-5 mt-4 shadow p-3 mb-4 mr-auto {% if loop.index % 2 == 0 %}left arrow_box_right{% else %}right arrow_box_left{% endif %} anim">
+        <div class="card col-md-5 mt-4 shadow p-3 mb-4 mr-auto {% if forloop.index % 2 == 0 %}left arrow_box_right{% else %}right arrow_box_left{% endif %} anim">
             <div class="row no-gutters">
-                {% if loop.index % 2 == 1 %}
+                {% if forloop.index % 2 == 1 %}
                 <a class="col-md-4 order-1 order-md-1 d-md-flex align-items-center text-center bg-light" target="_blank" href="{{ work.image.link }}">
                     <img src="{{ work.image.src }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto" width="auto" style="max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %};/* 10rem pour les logos carrés - 5rem pour ceux rectangulaires */">
                 </a>
                 {% endif %}
-                <div class="col-md-8 order-2 {% if loop.index % 2 == 0 %}order-md-1{% else %}order-md-2{% endif %} d-flex align-items-center">
+                <div class="col-md-8 order-2 {% if forloop.index % 2 == 0 %}order-md-1{% else %}order-md-2{% endif %} d-flex align-items-center">
                     <div class="card-body">
                         <h4 class="card-title">
                             <span class="fr">{{ work.title.fr }}</span>
@@ -56,7 +56,7 @@
                         </p>
                     </div>
                 </div>
-                {% if loop.index % 2 == 0 %}
+                {% if forloop.index % 2 == 0 %}
                 <a class="col-md-4 order-1 order-md-2 d-md-flex align-items-center text-center bg-light" target="_blank" href="{{ work.image.link }}">
                     <img src="{{ work.image.src }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto" width="auto" style="max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %};/* 10rem pour les logos carrés - 5rem pour ceux rectangulaires */">
                 </a>
@@ -68,7 +68,7 @@
     </div>
 
 
-    {% if loop.last %}
+    {% if forloop.last %}
     <!-- {{ work.year - 1 }} -->
     <!-- année -->
     <div class="row">
