--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,10 +11,10 @@
 
                 {% for nav in site.data.navbar %}
 
-                <li class="nav-item ml-1 mr-1 {% if page.url == '{{ nav.link }}' %}active{% endif %}">
+                <li class="nav-item ml-1 mr-1 {% if page.url ==  nav.link %}active{% endif %}">
                     <a class="nav-link" href="{{ nav.link }}">
-                        <span class="fr">{{ nav.name.fr }} {% if nav.url == "{{ nav.link }}" %}<span class="sr-only">(actuel)</span>{% endif %}</span>
-                        <span class="en">{{ nav.name.en }} {% if nav.url == "{{ nav.link }}" %}<span class="sr-only">(current)</span>{% endif %}</span>
+                        <span class="fr">{{ nav.name.fr }}{% if nav.url ==  nav.link %} <span class="sr-only">(actuel)</span>{% endif %}</span>
+                        <span class="en">{{ nav.name.en }}{% if nav.url ==  nav.link %} <span class="sr-only">(current)</span>{% endif %}</span>
                     </a>
                 </li>
 
