--- a/_includes/list_of_diplomas.html
+++ b/_includes/list_of_diplomas.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col">
                 <div class="progress" style="height: 20px;">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" style="width: calc({{ diploma.progress_bar.val }}/{{ diploma.progress_bar.max }}*100%);" aria-valuenow="{{ diploma.progress_bar.val }}" aria-valuemin="0" aria-valuemax="{{ diploma.progress_bar.max }}"></div>
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" role="progressbar" style="width: {{ diploma.progress_bar.val / diploma.progress_bar.max * (1/100) }}%;" aria-valuenow="{{ diploma.progress_bar.val }}" aria-valuemin="0" aria-valuemax="{{ diploma.progress_bar.max }}"></div>
                 </div>
             </div>
         </div>
