works on localhost

--- a/_includes/head.html.twig
+++ b/_includes/head.html.twig
@@ -25,11 +25,11 @@
 <link rel="stylesheet" href="/assets/css/styleTimeline.css">
 {% endif %}
 
-{% if page.404 %}
+{% if page.404 == 'current' %}
 <!-- Google font -->
 <link href="https://fonts.googleapis.com/css?family=Cabin:400,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:900" rel="stylesheet">
 
 <!-- Custom stlylesheet -->
-<link type="text/css" rel="stylesheet" href="/assets/css/404style.css" />
+<link rel="stylesheet" href="/assets/css/404style.css">
 {% endif %}
