--- a/_includes/header.html.twig
+++ b/_includes/header.html.twig
@@ -13,11 +13,10 @@
 
                 <li class="nav-item ml-1 mr-1 {% if page.url ==  nav.link %}active{% endif %}">
                     <a class="nav-link" href="{{ nav.link }}">
-                        <span class="fr">{{ nav.name.fr }}{% if nav.url ==  nav.link %} <span class="sr-only">(actuel)</span>{% endif %}</span>
-                        <span class="en">{{ nav.name.en }}{% if nav.url ==  nav.link %} <span class="sr-only">(current)</span>{% endif %}</span>
+                        <span class="fr">{{ nav.name.fr }}{% if page.url ==  nav.link %} <span class="sr-only">(actuel)</span>{% endif %}</span>
+                        <span class="en">{{ nav.name.en }}{% if page.url ==  nav.link %} <span class="sr-only">(current)</span>{% endif %}</span>
                     </a>
                 </li>
-
                 {% endfor %}
 
                 <!-- <li class="nav-item ml-1 mr-1 {% if page.url == '/' %}active{% endif %}">
