--- a/_includes/list_of_work_experience.html
+++ b/_includes/list_of_work_experience.html
@@ -1,11 +1,11 @@
 {% assign previous_year = 0 %}
 
 
-{% for item in site.data.work_experience %}
+{% for work in site.data.work_experience %}
 
 
     {% if previous_year != work.year %}
-        {% if previous_year - work.year > 1 and not forloop.first %}
+        {% if previous_year - work.year > 1 and forloop.first == false %}
             <!-- {{ previous_year - 1 }} -->
             <!-- année -->
             <div class="row">
@@ -18,7 +18,7 @@
         <!-- année -->
         <div class="row">
             <div class="timeline-annee">
-                <h2>{{ work.year  }}</h2>
+                <h2>{{ work.year }}</h2>
             </div>
         </div>
     {% endif %}
@@ -29,9 +29,9 @@
         <!-- {{ work.name }} -->
         <div class="card col-md-5 mt-4 shadow p-3 mb-4 mr-auto {% if forloop.index | modulo: 2 %}left arrow_box_right{% else %}right arrow_box_left{% endif %} anim">
             <div class="row no-gutters">
-                {% if forloop.index | modulo: 2 %}
+                {% if not (forloop.index | modulo: 2) %}
                 <a class="col-md-4 order-1 order-md-1 d-md-flex align-items-center text-center bg-light" target="_blank" href="{{ work.image.link }}">
-                    <img src="{{ work.image.src }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto" width="auto" {% if work.image.rectangle == true %}style="max-height: 5rem;"{% else %}style="max-height: 10rem;"{% endif %}{# 10rem pour les logos carrés - 5rem pour ceux rectangulaires #}>
+                    <img src="{{ work.image.src }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto" width="auto" style="max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %}/* 10rem pour les logos carrés - 5rem pour ceux rectangulaires */;">
                 </a>
                 {% endif %}
                 <div class="col-md-8 order-2 {% if forloop.index | modulo: 2 %}order-md-1{% else %}order-md-2{% endif %} d-flex align-items-center">
@@ -58,7 +58,7 @@
                 </div>
                 {% if forloop.index | modulo: 2 %}
                 <a class="col-md-4 order-1 order-md-2 d-md-flex align-items-center text-center bg-light" target="_blank" href="{{ work.image.link }}">
-                    <img src="{{ work.image.src }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto" width="auto" {% if work.image.rectangle == true %}style="max-height: 5rem;"{% else %}style="max-height: 10rem;"{% endif %}{# 10rem pour les logos carrés - 5rem pour ceux rectangulaires #}>
+                    <img src="{{ work.image.src }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto" width="auto" style="max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %}/* 10rem pour les logos carrés - 5rem pour ceux rectangulaires */;">
                 </a>
                 {% endif %}
             </div>
@@ -69,13 +69,13 @@
 
 
     {% if forloop.last %}
-    <!-- {{ work.year - 1 }} -->
+    <!-- {{ previous_year | minus: 1 }} -->
     <!-- année -->
     <div class="row">
         <div class="timeline-annee">
-            <h2>{{ work.year - 1  }}</h2>
+            <h2>{{ previous_year | minus: 1 }}</h2>
         </div>
     </div>
-    {% endif %}}
+    {% endif %}
 
 {% endfor %}
