--- a/_includes/list_of_work_experience.html
+++ b/_includes/list_of_work_experience.html
@@ -3,79 +3,82 @@
 
 {% for work in site.data.work_experience %}
 
+{% assign mod = forloop.index | modulo: 2 %}
 
-    {% if previous_year != work.year %}
-        {% if previous_year - work.year > 1 and forloop.first == false %}
-            <!-- {{ previous_year - 1 }} -->
-            <!-- année -->
-            <div class="row">
-                <div class="timeline-annee">
-                    <h2>{{ previous_year - 1 }}</h2>
-                </div>
-            </div>
-        {% endif %}
-        <!-- {{ work.year }} -->
-        <!-- année -->
-        <div class="row">
-            <div class="timeline-annee">
-                <h2>{{ work.year }}</h2>
-            </div>
+{% if previous_year != work.year %}
+{% assign difference = previous_year | minus: work.year %}
+{% if difference > 1 and forloop.first == false %}
+<!-- {{ previous_year | minus: 1 }} -->
+<!-- année -->
+<div class="row">
+  <div class="timeline-annee">
+    <h2>{{ previous_year | minus: 1 }}</h2>
+  </div>
+</div>
+{% endif %}
+<!-- {{ work.year }} -->
+<!-- année -->
+<div class="row">
+  <div class="timeline-annee">
+    <h2>{{ work.year }}</h2>
+  </div>
+</div>
+{% endif %}
+
+{% assign previous_year = work.year %}
+<div class="row">
+  <!-- {{ work.name }} -->
+  <div class="card col-md-5 mt-4 shadow p-3 mb-4 {% if mod == 1 %}mr-auto left arrow_box_right{% else %}ml-auto right arrow_box_left{% endif %} anim">
+    <div class="row no-gutters">
+      {% if mod!= 1 %}
+      <a class="col-md-4 order-1 order-md-1 d-md-flex align-items-center text-center bg-light" target="_blank" href="{{ work.image.link }}">
+        <img src="{{ work.image.src }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto" width="auto"
+          style="max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %}/* 10rem pour les logos carrés - 5rem pour ceux rectangulaires */;">
+      </a>
+      {% endif %}
+      <div class="col-md-8 order-2 {% if mod == 1 %}order-md-1{% else %}order-md-2{% endif %} d-flex align-items-center">
+        <div class="card-body">
+          <h4 class="card-title">
+            <span class="fr">{{ work.title.fr }}</span>
+            <span class="en">{{ work.title.en }}</span>
+          </h4>
+          <h5 class="badge badge-primary">
+            <span class="fr">{{ work.job.fr }}</span>
+            <span class="en">{{ work.job.en }}</span>
+          </h5>
+          <div class="card-text">
+            <div class="fr">{{ work.description.fr }}</div>
+            <div class="en">{{ work.description.en }}</div>
+          </div>
+          <p class="card-text">
+            <small class="text-muted">
+              <span class="fr"><i class="fas fa-calendar-alt"></i> {{ work.dates.fr }}</span>
+              <span class="en"><i class="fas fa-calendar-alt"></i> {{ work.dates.en }}</span>
+            </small>
+          </p>
         </div>
-    {% endif %}
-
-    {% assign previous_year = work.year %}
-
-    <div class="row">
-        <!-- {{ work.name }} -->
-        <div class="card col-md-5 mt-4 shadow p-3 mb-4 mr-auto {% if forloop.index | modulo: 2 %}left arrow_box_right{% else %}right arrow_box_left{% endif %} anim">
-            <div class="row no-gutters">
-                {% if not (forloop.index | modulo: 2) %}
-                <a class="col-md-4 order-1 order-md-1 d-md-flex align-items-center text-center bg-light" target="_blank" href="{{ work.image.link }}">
-                    <img src="{{ work.image.src }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto" width="auto" style="max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %}/* 10rem pour les logos carrés - 5rem pour ceux rectangulaires */;">
-                </a>
-                {% endif %}
-                <div class="col-md-8 order-2 {% if forloop.index | modulo: 2 %}order-md-1{% else %}order-md-2{% endif %} d-flex align-items-center">
-                    <div class="card-body">
-                        <h4 class="card-title">
-                            <span class="fr">{{ work.title.fr }}</span>
-                            <span class="en">{{ work.title.en }}</span>
-                        </h4>
-                        <h5 class="badge badge-primary">
-                            <span class="fr">{{ work.job.fr }}</span>
-                            <span class="en">{{ work.job.en }}</span>
-                        </h5>
-                        <div class="card-text">
-                            <div class="fr">{{ work.description.fr }}</div>
-                            <div class="en">{{ work.description.en }}</div>
-                        </div>
-                        <p class="card-text">
-                            <small class="text-muted">
-                                <span class="fr"><i class="fas fa-calendar-alt"></i> {{ work.dates.fr }}</span>
-                                <span class="en"><i class="fas fa-calendar-alt"></i> {{ work.dates.en }}</span>
-                            </small>
-                        </p>
-                    </div>
-                </div>
-                {% if forloop.index | modulo: 2 %}
-                <a class="col-md-4 order-1 order-md-2 d-md-flex align-items-center text-center bg-light" target="_blank" href="{{ work.image.link }}">
-                    <img src="{{ work.image.src }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto" width="auto" style="max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %}/* 10rem pour les logos carrés - 5rem pour ceux rectangulaires */;">
-                </a>
-                {% endif %}
-            </div>
-        </div>
-        <!-- point -->
-        <div class="timeline-point anim"></div>
+      </div>
+      {% if mod == 1 %}
+      <a class="col-md-4 order-1 order-md-2 d-md-flex align-items-center text-center bg-light" target="_blank" href="{{ work.image.link }}">
+        <img src="{{ work.image.src }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto" width="auto"
+          style="max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %}/* 10rem pour les logos carrés - 5rem pour ceux rectangulaires */;">
+      </a>
+      {% endif %}
     </div>
+  </div>
+  <!-- point -->
+  <div class="timeline-point anim"></div>
+</div>
 
 
-    {% if forloop.last %}
-    <!-- {{ previous_year | minus: 1 }} -->
-    <!-- année -->
-    <div class="row">
-        <div class="timeline-annee">
-            <h2>{{ previous_year | minus: 1 }}</h2>
-        </div>
-    </div>
-    {% endif %}
+{% if forloop.last %}
+<!-- {{ previous_year | minus: 1 }} -->
+<!-- année -->
+<div class="row">
+  <div class="timeline-annee">
+    <h2>{{ previous_year | minus: 1 }}</h2>
+  </div>
+</div>
+{% endif %}
 
 {% endfor %}
