--- a/_includes/list_of_projects.html
+++ b/_includes/list_of_projects.html
@@ -2,31 +2,39 @@
 
 <!-- {{ project.name }} -->
 <div class="col mb-4">
-    <div class="card h-100">
-        <div class="card-header text-center">
-            <div class="row rowImage">
-                <div class="col-12 d-flex align-items-center">
-                    <img src="{{ project.image.name }}" class="rounded mx-auto" alt="{{ project.image.alt }}">
-                </div>
-            </div>
+  <div class="card h-100">
+    <div class="card-header text-center">
+      <div class="row rowImage">
+        <div class="col-12 d-flex align-items-center">
+          <img src="{{ project.image.name }}" class="rounded mx-auto" alt="{{ project.image.alt }}">
         </div>
-        <div class="card-body">
-            <h4 class="card-title text-center fr">{{ project.title.fr }}</h4>
-            <h4 class="card-title text-center en">{{ project.title.en }}</h4>
-            <hr>
-            <p class="card-text fr">{{ project.content.fr }}</p>
-            <p class="card-text en">{{ project.content.en }}</p>
-        </div>
-        <div class="card-footer text-center">
-            {% if project.website.lien != "" %}
-            <a target="_blank" href="{{ project.website.lien }}" class="btn btn-primary btn-block fr">{{ project.website.txt.fr }}</a>
-            <a target="_blank" href="{{ project.website.lien }}" class="btn btn-primary btn-block en">{{ project.website.txt.en }}</a>
-            {% endif %}
-            {% if project.repository.lien And project.repository.lien != "" %}
-            <a target="_blank" href="{{ project.repository.lien }}" class="btn btn-secondary btn-block"><i class="fab fa-github"></i> Github repository</a>
-            {% endif %}
-        </div>
+      </div>
     </div>
+    <div class="card-body">
+      <h4 class="card-title text-center fr">{{ project.title.fr }}</h4>
+      <h4 class="card-title text-center en">{{ project.title.en }}</h4>
+      <hr>
+      <p class="card-text fr">{{ project.content.fr }}</p>
+      <p class="card-text en">{{ project.content.en }}</p>
+
+      {% if project.ranking %}
+      <hr>
+      {% for rank in project.ranking %}
+      <p class="card-text fr">{{ rank.icon }}{% if rank.link != "" %}<a target="_blank" href="{{ rank.link }}">{% endif %}&thinsp; {{ rank.title.fr }}{% if rank.link != "" %}</a>{% endif %}</p>
+      <p class="card-text en">{{ rank.icon }}{% if rank.link != "" %}<a target="_blank" href="{{ rank.link }}">{% endif %}&thinsp; {{ rank.title.en }}{% if rank.link != "" %}</a>{% endif %}</p>
+      {% endfor %}
+      {% endif %}
+    </div>
+    <div class="card-footer text-center">
+      {% if project.website and project.website.lien != "" %}
+      <a target="_blank" href="{{ project.website.lien }}" class="btn btn-primary btn-block fr">{{ project.website.txt.fr }}</a>
+      <a target="_blank" href="{{ project.website.lien }}" class="btn btn-primary btn-block en">{{ project.website.txt.en }}</a>
+      {% endif %}
+      {% if project.repository and project.repository.lien != "" %}
+      <a target="_blank" href="{{ project.repository.lien }}" class="btn btn-secondary btn-block"><i class="fab fa-github"></i> Github repository</a>
+      {% endif %}
+    </div>
+  </div>
 </div>
 
 {% endfor %}
