--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,21 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    {% include head.html.twig %}
+  {% include head.html %}
 </head>
+
 <body>
 
-{% include header.html.twig %}
+  {% include header.html %}
 
-<main class="page-main" role="main">
-        {{ content }}
-</main>
+  <main class="page-main" role="main">
+    {{ content }}
+  </main>
 
-{% include footer.html.twig %}
-{% include scripts.html.twig %}
+  {% include footer.html %}
+  {% include scripts.html %}
 
 </body>
+
 </html>
