--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
   {{ page.title }}
   {% endif %}
 </title>
+<link rel="icon" type="image/gif/png" href="{{ site.image }}">
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
