--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,12 +14,12 @@
 
 <meta property="og:title" content="{{ site.title }}">
 <meta property="og:description" content="{{ site.description }}">
-<meta property="og:image" content="{{ site.image }}">
+<meta property="og:image" content="{{ site.url }}{{ site.image }}">
 <meta property="og:url" content="{{ site.url }}">
 
 <meta name="twitter:title" content="{{ site.title }}">
 <meta name="twitter:description" content="{{ site.description }}">
-<meta name="twitter:image" content="{{ site.image }}">
+<meta name="twitter:image" content="{{ site.url }}{{ site.image }}">
 <meta name="twitter:card" content="summary_large_image">
 
 <!-- Bootstrap CSS -->
