--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,10 +28,10 @@
                         <a class="dropdown-item choix-lang text-center en" href="?lang=fr"><span class="flag-icon flag-icon-fr"> </span>  Français</a>
                     </div>
                 </li>
-                <li class="nav-item custom-control custom-switch ml-1 mr-1">
+                <li class="nav-item ml-1 mr-1">
                     <div class="nav-link">
-                        <input type="checkbox" class="custom-control-input darkSwitch" id="darkSwitch"/>
-                        <label class="custom-control-label darkSwitch" for="darkSwitch">Dark Mode</label>
+                      <input type="checkbox" id="darkSwitch" class="d-none"/>
+                      <label for="darkSwitch" class="darkSwitch" data-toggle="tooltip" data-html="true" title="<b>Change Mode</b><br>Dark / Light"><i class="fas fa-moon"></i></label>
                     </div>
                 </li>
             </ul>
