--- a/_includes/list_of_work_experience.html
+++ b/_includes/list_of_work_experience.html
@@ -33,7 +33,7 @@
       {% if mod!= 1 %}
       <a class="col-md-4 order-1 order-md-1 d-md-flex align-items-center text-center bg-light" target="_blank" href="{{ work.image.link }}">
         <img src="{{ work.image.src }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto" width="auto"
-          style="max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %}/* 10rem pour les logos carrés - 5rem pour ceux rectangulaires */;">
+          style="max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %};"> <!-- 10rem pour les logos carrés - 5rem pour ceux rectangulaires -->
       </a>
       {% endif %}
       <div class="col-md-8 order-2 {% if mod == 1 %}order-md-1{% else %}order-md-2{% endif %} d-flex align-items-center">
@@ -61,7 +61,7 @@
       {% if mod == 1 %}
       <a class="col-md-4 order-1 order-md-2 d-md-flex align-items-center text-center bg-light" target="_blank" href="{{ work.image.link }}">
         <img src="{{ work.image.src }}" alt="{{ work.image.alt }}" class="img-fluid rounded m-2 mx-auto" width="auto"
-          style="max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %}/* 10rem pour les logos carrés - 5rem pour ceux rectangulaires */;">
+          style="max-height: {% if work.image.rectangle == true %}5rem{% else %}10rem{% endif %};"> <!-- 10rem pour les logos carrés - 5rem pour ceux rectangulaires -->
       </a>
       {% endif %}
     </div>
