--- a/_includes/list_of_diplomas.html
+++ b/_includes/list_of_diplomas.html
@@ -27,7 +27,7 @@
         </div>
         <div class="row mt-3 mb-3">
             <div class="col">
-                <a class="card-link" target="_blank" href="{{ diploma.image.link }}"><img src="{{ diploma.image.src }}" alt="{{ diploma.image.alt }}"></a>
+                <a class="card-link" target="_blank" href="{{ diploma.image.link }}"><img class="rounded" src="{{ diploma.image.src }}" alt="{{ diploma.image.alt }}"></a>
             </div>
         </div>
         <div class="row">
