--- a/_includes/list_of_diplomas.html
+++ b/_includes/list_of_diplomas.html
@@ -12,7 +12,7 @@
             </div>
             <div class="col-5 text-right">
                 <h4 class="fr"><i class="fas fa-calendar-alt"></i> {{ diploma.date.fr }}</h4>
-                <h4 class="en"><i class="fas fa-calendar-alt"></i> {{ diploma.date.fr }}</h4>
+                <h4 class="en"><i class="fas fa-calendar-alt"></i> {{ diploma.date.en }}</h4>
             </div>
         </div>
         <div class="row mt-3">
