add visitor counter at the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,9 @@
             <p class="text-center">
                 <span class="fr">Tous droits réservés. &copy; {{ site.time | date: '%Y' }} - Antoine TABARAUD<br/><i>Dernière mise à jour : {{ site.lastUpdate.fr }}</i></span>
                 <span class="en">All rights reserved. &copy; {{ site.time | date: '%Y' }} - Antoine TABARAUD<br/><i>Last update : {{ site.lastUpdate.en }}</i></span>
+                <br/><span id="visitorsCounters"></span>
+                <span class="fr"> visiteurs</span>
+                <span class="en"> visitors</span>
             </p>
         </div>
     </div>
