--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,17 @@ main {
   max-width: 100%;
 }
 
+#projects-content .card .card-header .rowImage img.icon {
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  right: 0;
+  max-height: 60px;
+  width: auto;
+  max-width: 100%;
+  filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.3));
+}
+
 /* images des ecoles des diplomes */
 #diplomas-content img {
   height: 50px;
