add icon for projects + change url img(add folders) + change load events

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,16 +14,16 @@
 
 <meta property="og:title" content="{{ site.title }}">
 <meta property="og:description" content="{{ site.description }}">
-<meta property="og:image" content="{{ site.url }}{{ site.image }}">
+<meta property="og:image" content="{{ site.url }}/assets/img/logo/{{ site.image }}">
 <meta property="og:url" content="{{ site.url }}">
 
 <meta name="twitter:title" content="{{ site.title }}">
 <meta name="twitter:description" content="{{ site.description }}">
-<meta name="twitter:image" content="{{ site.url }}{{ site.image }}">
+<meta name="twitter:image" content="{{ site.url }}/assets/img/logo/{{ site.image }}">
 <meta name="twitter:card" content="summary_large_image">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="{{ site.favicon }}">
+<link rel="shortcut icon" href="/assets/img/logo/{{ site.favicon }}">
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
