--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,17 @@
 <!-- Footer -->
-<footer class="container-fluid page-footer">
-    <div class="row">
-        <div class="col-12">
-            <hr class="container">
-            <p class="text-center">
-                <span class="fr">Tous droits réservés. &copy; {{ site.time | date: '%Y' }} - Antoine TABARAUD<br/><i>Dernière mise à jour : {{ site.lastUpdate.fr }}</i></span>
-                <span class="en">All rights reserved. &copy; {{ site.time | date: '%Y' }} - Antoine TABARAUD<br/><i>Last update : {{ site.lastUpdate.en }}</i></span>
-                <br/><span id="visitorsCounters"></span>
-                <span class="fr"> visiteurs</span>
-                <span class="en"> visitors</span>
-            </p>
-        </div>
-    </div>
+<footer class="page-footer" role="footer">
+  <div class="container-fluid mt-3">
+      <div class="row">
+          <div class="col-12">
+              <p class="text-center">
+                  <span class="fr">Tous droits réservés. &copy; {{ site.time | date: '%Y' }} - Antoine TABARAUD<br/><i>Dernière mise à jour : {{ site.lastUpdate.fr }}</i></span>
+                  <span class="en">All rights reserved. &copy; {{ site.time | date: '%Y' }} - Antoine TABARAUD<br/><i>Last update : {{ site.lastUpdate.en }}</i></span>
+                  <br/><span id="visitorsCounters"></span>
+                  <span class="fr"> visiteurs</span>
+                  <span class="en"> visitors</span>
+              </p>
+          </div>
+      </div>
+  </div>
 </footer>
 <!-- Fin Footer -->
