--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="sticky-top page-header">
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-        <a class="navbar-brand p-0" href="/"><img src="/assets/img/logo site2.svg" alt="AT" width="40px" height="40px"></a>
+        <a class="navbar-brand p-0" href="/"><img src="/assets/img/logo/{{ site.image }}" alt="AT" width="40px" height="40px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
