--- a/_includes/list_of_projects.html
+++ b/_includes/list_of_projects.html
@@ -6,12 +6,12 @@
     <div class="card-header text-center">
       <div class="row rowImage">
       {% if project.icon %}
-      <div class="d-flex align-items-center">
-        <img src="{{ project.icon.name }}" class="rounded icon m-2" alt="{{ project.icon.alt }}">
-      </div>
+        <div class="d-flex align-items-center">
+          <img src="/assets/img/projects/{{ project.icon.name }}" class="rounded icon m-2" alt="{{ project.icon.alt }}">
+        </div>
       {% endif %}
         <div class="col-12 d-flex align-items-center">
-          <img src="{{ project.image.name }}" class="rounded mx-auto" alt="{{ project.image.alt }}">
+          <img src="/assets/img/projects/{{ project.image.name }}" class="rounded mx-auto" alt="{{ project.image.alt }}">
         </div>
       </div>
     </div>
