--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   {% include head.html %}
 </head>
 
-<body data-theme="dark">
+<body data-theme="dark"  onload="onBodyLoaded()">
 
   {% include header.html %}
 
