--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -18,3 +18,15 @@
 <!-- pour la timeline -->
 <script src="/assets/js/scriptTimeLine.js"></script>
 {% endif %}
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LE3WKQ7KKQ"></script>
+<script>
+  if(window.location.origin == "{{ site.url }}") {
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LE3WKQ7KKQ');
+  }
+</script>
