add loading icon unitl img load completed

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,6 +32,7 @@
 
 <!-- CSS perso -->
 <link rel="stylesheet" href="/assets/css/style.css">
+<link rel="stylesheet" href="/assets/css/loading.css">
 <!-- pour le mode nuit -->
 <link rel="stylesheet" href="/assets/css/dark-mode.css">
 
