--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,10 @@
 
   {% include header.html %}
 
+  <div id="loading-icon">
+        <div class="lds-ripple">Loading<div></div><div></div></div>
+  </div>
+
   <main class="page-main" role="main">
     {{ content }}
   </main>
