--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -27,6 +27,6 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-LE3WKQ7KKQ');
+    gtag('config', 'G-LE3WKQ7KKQ', { 'cookieFlags': 'SameSite=None; Secure' });
   }
 </script>
