--- a/_includes/list_of_projects.html
+++ b/_includes/list_of_projects.html
@@ -19,14 +19,14 @@
       <h4 class="card-title text-center fr">{{ project.title.fr }}</h4>
       <h4 class="card-title text-center en">{{ project.title.en }}</h4>
       <hr>
-      <p class="card-text fr">{{ project.content.fr }}</p>
-      <p class="card-text en">{{ project.content.en }}</p>
+      <div class="card-text fr">{{ project.content.fr }}</div>
+      <div class="card-text en">{{ project.content.en }}</div>
 
       {% if project.ranking %}
       <hr>
       {% for rank in project.ranking %}
-      <p class="card-text fr">{{ rank.icon }}{% if rank.link != "" %}<a target="_blank" href="{{ rank.link }}">{% endif %}&thinsp; {{ rank.title.fr }}{% if rank.link != "" %}</a>{% endif %}</p>
-      <p class="card-text en">{{ rank.icon }}{% if rank.link != "" %}<a target="_blank" href="{{ rank.link }}">{% endif %}&thinsp; {{ rank.title.en }}{% if rank.link != "" %}</a>{% endif %}</p>
+      <div class="card-text fr">{{ rank.icon }}{% if rank.link != "" %}<a target="_blank" href="{{ rank.link }}">{% endif %}&thinsp; {{ rank.title.fr }}{% if rank.link != "" %}</a>{% endif %}</div>
+      <div class="card-text en">{{ rank.icon }}{% if rank.link != "" %}<a target="_blank" href="{{ rank.link }}">{% endif %}&thinsp; {{ rank.title.en }}{% if rank.link != "" %}</a>{% endif %}</div>
       {% endfor %}
       {% endif %}
     </div>
