--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,11 @@
   {% include header.html %}
 
   <div id="loading-icon">
-        <div class="lds-ripple">Loading<div></div><div></div></div>
+        <div class="lds-ripple">
+          <span>Loading</span>
+          <div></div>
+          <div></div>
+        </div>
   </div>
 
   <main class="page-main" role="main">
