--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,40 +1,42 @@
 <header class="sticky-top page-header">
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-        <a class="navbar-brand p-0" href="/"><img src="/assets/img/logo/{{ site.image }}" alt="AT" width="40px" height="40px"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="container-fluid">
+            <a class="navbar-brand p-0" href="/"><img src="/assets/img/logo/{{ site.image }}" alt="AT" width="40px" height="40px"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarToggler">
-            <ul class="navbar-nav ml-auto mr-auto text-center">
+            <div class="collapse navbar-collapse" id="navbarToggler">
+                <ul class="navbar-nav ms-auto me-auto text-center">
 
-                {% for nav in site.data.navbar %}
-                <li class="nav-item ml-1 mr-1 {% if page.url ==  nav.link %}active{% endif %}">
-                    <a class="nav-link" href="{{ nav.link }}">
-                        <span class="fr">{{ nav.name.fr }}{% if page.url ==  nav.link %} <span class="sr-only">(actuel)</span>{% endif %}</span>
-                        <span class="en">{{ nav.name.en }}{% if page.url ==  nav.link %} <span class="sr-only">(current)</span>{% endif %}</span>
-                    </a>
-                </li>
-                {% endfor %}
+                    {% for nav in site.data.navbar %}
+                    <li class="nav-item ms-1 me-1 {% if page.url ==  nav.link %}active{% endif %}">
+                        <a class="nav-link" href="{{ nav.link }}">
+                            <span class="fr">{{ nav.name.fr }}{% if page.url ==  nav.link %} <span class="sr-only">(actuel)</span>{% endif %}</span>
+                            <span class="en">{{ nav.name.en }}{% if page.url ==  nav.link %} <span class="sr-only">(current)</span>{% endif %}</span>
+                        </a>
+                    </li>
+                    {% endfor %}
 
-                <li class="nav-item dropdown ml-1 mr-1">
-                    <a class="nav-link dropdown-toggle choix-lang" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        <span class="fr"><span class="flag-icon flag-icon-fr"> </span></span>
-                        <span class="en"><span class="flag-icon flag-icon-gb"> </span></span>
-                    </a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item choix-lang text-center fr" href="?lang=en"><span class="flag-icon flag-icon-gb"> </span>  English</a>
-                        <a class="dropdown-item choix-lang text-center en" href="?lang=fr"><span class="flag-icon flag-icon-fr"> </span>  Français</a>
-                    </div>
-                </li>
-                <li class="nav-item ml-1 mr-1">
-                    <div class="nav-link">
-                      <input type="checkbox" id="darkSwitch" class="d-none"/>
-                      <label for="darkSwitch" class="darkSwitch" data-toggle="tooltip" data-html="true" title="<b>Change Mode</b><br>Dark / Light"><i class="fas fa-moon"></i></label>
-                    </div>
-                </li>
-            </ul>
+                    <li class="nav-item dropdown ms-1 me-1">
+                        <a class="nav-link dropdown-toggle choix-lang" data-bs-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            <span class="fr"><span class="flag-icon flag-icon-fr"> </span></span>
+                            <span class="en"><span class="flag-icon flag-icon-gb"> </span></span>
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item choix-lang text-center fr" href="?lang=en"><span class="flag-icon flag-icon-gb"> </span>  English</a>
+                            <a class="dropdown-item choix-lang text-center en" href="?lang=fr"><span class="flag-icon flag-icon-fr"> </span>  Français</a>
+                        </div>
+                    </li>
+                    <li class="nav-item ms-1 me-1">
+                        <div class="nav-link">
+                          <input type="checkbox" id="darkSwitch" class="d-none"/>
+                          <label for="darkSwitch" class="darkSwitch form-label" data-bs-toggle="tooltip" data-html="true" title="<b>Change Mode</b><br>Dark / Light"><i class="fas fa-moon"></i></label>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <!-- Fin NavBar -->
