--- a/_includes/list_of_projects.html
+++ b/_includes/list_of_projects.html
@@ -4,7 +4,7 @@
 <div class="col mb-4">
   <div class="card h-100">
     <div class="card-header text-center">
-      <div class="row rowImage">
+      <div class="row g-0 rowImage">
       {% if project.icon %}
         <div class="d-flex align-items-center">
           <img src="/assets/img/projects/{{ project.icon.name }}" class="rounded icon m-2" alt="{{ project.icon.alt }}">
@@ -31,13 +31,13 @@
       {% endif %}
     </div>
     {% if project.website or project.repository %}
-    <div class="card-footer text-center">
+    <div class="card-footer text-center d-grid gap-2">
       {% if project.website and project.website.lien != "" %}
-      <a target="_blank" href="{{ project.website.lien }}" class="btn btn-primary btn-block fr">{{ project.website.txt.fr }}</a>
-      <a target="_blank" href="{{ project.website.lien }}" class="btn btn-primary btn-block en">{{ project.website.txt.en }}</a>
+      <a target="_blank" href="{{ project.website.lien }}" class="btn btn-primary fr">{{ project.website.txt.fr }}</a>
+      <a target="_blank" href="{{ project.website.lien }}" class="btn btn-primary en">{{ project.website.txt.en }}</a>
       {% endif %}
       {% if project.repository and project.repository.lien != "" %}
-      <a target="_blank" href="{{ project.repository.lien }}" class="btn btn-secondary btn-block"><i class="fab fa-github"></i> Github repository</a>
+      <a target="_blank" href="{{ project.repository.lien }}" class="btn btn-secondary"><i class="fab fa-github"></i> Github repository</a>
       {% endif %}
     </div>
     {% endif %}
