fix darkmode tooltips (due to bootstrap upgrade)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
                     <li class="nav-item ms-1 me-1">
                         <div class="nav-link">
                           <input type="checkbox" id="darkSwitch" class="d-none"/>
-                          <label for="darkSwitch" class="darkSwitch form-label" data-bs-toggle="tooltip" data-html="true" title="<b>Change Mode</b><br>Dark / Light"><i class="fas fa-moon"></i></label>
+                          <label for="darkSwitch" class="darkSwitch form-label" data-bs-toggle="tooltip"  data-bs-html="true" title="<b>Change Mode</b><br>Dark / Light"><i class="fas fa-moon"></i></label>
                         </div>
                     </li>
                 </ul>
